Contact Page Update

--- a/about.html
+++ b/about.html
@@ -52,12 +52,12 @@
                             <div class="col-xl-8 col-lg-8 col-md-8">
                                 <!-- Main-menu -->
                                 <div class="main-menu f-right d-none d-lg-block">
-                                    <nav> 
-                                        <ul id="navigation">                                                                                                                                     
+                                    <nav>
+                                        <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="services.html">Services</a></li>
-                                            <li><a href="work.html">Works</a></li>
+                                            <!-- <li><a href="work.html">Works</a></li>
                                             <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
@@ -68,7 +68,7 @@
                                                 <ul class="submenu">
                                                     <li><a href="elements.html">Element</a></li>
                                                 </ul>
-                                            </li>
+                                            </li> -->
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -237,49 +237,7 @@
             </div>
         </div>
         <!-- Testimonial End -->
-        <!-- Visit Our Tailor Start -->
-        <div class="visit-tailor-area fix visit-pt-200">
-            <!--Right Contents  -->
-            <div class="tailor-offers"></div>
-            <!-- left Contents -->
-            <div class="tailor-details">
-                <span>All of our Skills In The Fild</span>
-                <h3>Differentiate Yourself And <br>Attractive Attention</h3>
-                <p>Tempor incididunt ut labore et cvhjfhore magna aliqua. Ut<br> enim ad minim veniam, quis.</p>
-                    <!-- skill Start -->
-                <div class="skill-ara">
-                    <div class="skill">
-                        <div class="single-skill">
-                            <div class="progress-count">
-                                <p>User Interface</p><span>75%</span>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar wow slideInLeft" data-wow-duration="1s" data-wow-delay=".5s" aria-valuenow="25" role="progressbar" style="width: 75%"  aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="single-skill">
-                            <div class="progress-count">
-                                <p>Digital Marketing</p><span>89%</span>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar wow slideInLeft" data-wow-duration="1s" data-wow-delay=".7s" role="progressbar" style="width: 89%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="single-skill">
-                            <div class="progress-count">
-                                <p>User Interface</p><span>95%</span>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar wow slideInLeft" data-wow-duration="1s" data-wow-delay=".6s" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- skill End -->
-            </div>
-
-        </div>
-        <!-- Visit Our Tailor End -->
+       
         
         <!-- Want To Work Start -->
         <div class="wantToWork-area wantToWork-area2 w-padding2">
