--- a/about.html
+++ b/about.html
@@ -116,8 +116,8 @@
                     </div>
                     <div class="col-lg-7">
                         <div class="about-details mb-50">
-                            <p class="pear1">We believe that every project existing in digital world is a result of an idea and every idea has a cause. </p>
-                            <p class="pear2">Amet, consectetur adipisicing elit, sed dosmod tempor didunt ut labore et dolor dfagna iqus ad minim veniam quis. sectetur adipisicing eld do eiusmod tempor didunt ut labore et dolore magna aliqus ad minim.</p>
+                            <p class="pear1">Dependable Aviation Consulting (DAC) is a division of Dependable Outcomes Ltd (DOL), a privately owned Ugandan company based in Kampala, Uganda. </p>
+                            <p class="pear2">At DAC we strive to offer our clients result-oriented solutions in airline management consulting, chartering, leasing and outsourcing of aircraft spare parts and maintenance contracts. Our team of experts has the industry competence in these fields and can provide tailored solutions to meet each client’s needs. </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -127,9 +127,9 @@
                     </div>
                     <div class="col-lg-7">
                         <div class="about-details">
-                            <p class="pear1">We believe that every project existing in digital world is a result of an idea and every idea has a cause. </p>
-                            <p class="pear2">Amet, consectetur adipisicing elit, sed dosmod tempor didunt ut labore et dolor dfagna iqus ad minim veniam quis. sectetur adipisicing eld do eiusmod tempor didunt ut labore et dolore magna aliqus ad minim.</p>
-                            <p class="pear2">Amet, consectetur adipisicing elit, sed dosmod tempor didunt ut labore et dolor dfagna iqus ad minim veniam quis. sectetur adipisicing eld do eiusmod tempor didunt ut labore et dolore magna aliqus ad minim.</p>
+                            <p class="pear1">Our philosophy is to serve each client with dedications in order to get results beyond their expectation by improving service, optimizing revenues or lowering costs.  </p>
+                            <p class="pear2">Given the rapid change of the African aviation landscape, our experts keep abreast of the changes and continue to pioneer innovative solutions to deliver successful projects and help our clients improve service. We collaborate with our clients to evaluate their needs and establish strategies for success.</p>
+                            <p class="pear2">Some of our services are offered through partnerships we have established with industry experts in UAE, USA and Canada so as to effectively meet our clients’ demand and delivery requirements.   </p>
                         </div>
                     </div>
                 </div>
