--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                   <div class="contact-item">
                     <i class="fa fa-envelope"></i>
                     <h4>Email</h4>
-                    <p>You can also opt to email us <br> Link</p>
+                    <p>You can also opt to email us <br>For quick correspondence</p>
                     <a href="#">Mail</a>
                   </div>
                 </div>
@@ -130,8 +130,8 @@
                   <div class="contact-item">
                     <i class="fa fa-map-marker"></i>
                     <h4>Location</h4>
-                    <p>Kamu Kamu Plaza <br> Entebe Rd.</p>
-                    <a href="#">View on Google Maps</a>
+                    <p>Pt. 3439 Lufuka, Ndejje Road off Entebbe <br>Road (150 m from Bata Bata Stage)</p>
+                    <a href="#">Namasuba, Kampala	</a>
                   </div>
                 </div>
               </div>
@@ -177,21 +177,21 @@
                             <div class="media contact-info">
                                 <span class="contact-info__icon"><i class="ti-home"></i></span>
                                 <div class="media-body">
-                                    <h3>Buttonwood, California.</h3>
-                                    <p>Rosemead, CA 91770</p>
+                                    <h3>Pt. 3439 Lufuka, Ndejje Road </h3>
+                                    <p>150 m from Bata Bata Stage</p>
                                 </div>
                             </div>
                             <div class="media contact-info">
                                 <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                                 <div class="media-body">
-                                    <h3>+1 253 565 2365</h3>
+                                    <h3>+256 770000000</h3>
                                     <p>Mon to Fri 9am to 6pm</p>
                                 </div>
                             </div>
                             <div class="media contact-info">
                                 <span class="contact-info__icon"><i class="ti-email"></i></span>
                                 <div class="media-body">
-                                    <h3>support@colorlib.com</h3>
+                                    <h3>support@dependable.com</h3>
                                     <p>Send us your query anytime!</p>
                                 </div>
                             </div>
