--- a/services.html
+++ b/services.html
@@ -115,7 +115,7 @@
                                 <span class="flaticon-experience"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>Strategic Planning</h5>
+                                <h5>Network and fleet planning</h5>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                                 <span class="flaticon-pay"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>Trades & stocks</h5>
+                                <h5>Market analysis and forecasting</h5>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
                             </div>
                         </div>
@@ -137,8 +137,8 @@
                                 <span class="flaticon-good"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>Audit & Assurance</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h5>Route design and optimization</h5>
+                                <p>Route design and optimization of flight times to improve route performance</p>
                             </div>
                         </div>
                     </div>
@@ -148,8 +148,8 @@
                                 <span class="flaticon-experience"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>Strategic Planning</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h5>Business plan</h5>
+                                <p>Business plan (to determine financial viability of new operation)</p>
                             </div>
                         </div>
                     </div>
@@ -159,8 +159,8 @@
                                 <span class="flaticon-pay"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>Trades & stocks</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h5>Research to identify opportunities</h5>
+                                <p>Increase revenues and load factor in cargo operations</p>
                             </div>
                         </div>
                     </div>
@@ -170,8 +170,8 @@
                                 <span class="flaticon-good"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>Audit & Assurance</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h5>Outsourcing charter </h5>
+                                <p>Outsourcing charter and lease services, and spare parts and maintenance contracts.</p>
                             </div>
                         </div>
                     </div>
