--- a/contact.html
+++ b/contact.html
@@ -222,10 +222,10 @@
                                 <div class="footer-tittle">
                                     <h4>Services</h4>
                                     <ul>
-                                        <li><a href="#">Marketing</a></li>
-                                        <li><a href="#"> SEO Service</a></li>
-                                        <li><a href="#">Digital market</a></li>
-                                        <li><a href="#">Content create</a></li>
+                                        <li><a href="#">Health Service</a></li>
+                                        <li><a href="#">Lifting Services</a></li>
+                                        <li><a href="#">Earth Movers</a></li>
+                                        <li><a href="#">Low loaders</a></li>
                                         <li><a href="#">Find Us</a></li>
                                     </ul>
                                 </div>
@@ -248,11 +248,11 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4><span>+564</span> 7885 3222</h4>
+                                    <h4><span>+256</span> 7885 3222</h4>
                                     <ul>
-                                        <li><a href="#">youremail@gmail.com</a></li>
+                                        <li><a href="#">info@dependable.com</a></li>
                                     </ul>
-                                    <p>123 East 26th Street, Fifth Floor, New York, NY 10011</p>
+                                    <p>Plot No. 3439 Lufuka, Ndejje Road, 150 m from Bata Bata Stage</p>
                                 </div>
                                 <!-- footer social -->
                                 <div class="footer-social">
@@ -270,7 +270,7 @@
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right">
                                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#" target="_blank">346Code</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                             </div>
                         </div>
