--- a/services.html
+++ b/services.html
@@ -116,7 +116,7 @@
                             </div>
                             <div class="services-cap">
                                 <h5>Network and fleet planning</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Basis of good commercial airline planning as understanding and modelling true market demand lies.</p>
                             </div>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             </div>
                             <div class="services-cap">
                                 <h5>Market analysis and forecasting</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Forecasting quantifies the size and growth of that demand. As an airline market analysis data.</p>
                             </div>
                         </div>
                     </div>
@@ -171,7 +171,8 @@
                             </div>
                             <div class="services-cap">
                                 <h5>Outsourcing charter </h5>
-                                <p>Outsourcing charter and lease services, and spare parts and maintenance contracts.</p>
+                                <p>Outsourcing charter and lease services, and spare parts and maintenance contracts.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -185,11 +186,11 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-8 col-lg-8 col-md-8">
                         <div class="wantToWork-caption wantToWork-caption2">
-                            <h2>Send us a message if you have an issue with your order.</h2>
+                            <h2>Send us a message if you have an form of inquiry.</h2>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4">
-                        <a href="#" class="btn btn-black f-right">contact us now</a>
+                        <a href="contact.html" class="btn btn-black f-right">contact us now</a>
                     </div>
                 </div>
             </div>
@@ -218,10 +219,10 @@
                                 <div class="footer-tittle">
                                     <h4>Services</h4>
                                     <ul>
-                                        <li><a href="#">Marketing</a></li>
-                                        <li><a href="#"> SEO Service</a></li>
-                                        <li><a href="#">Digital market</a></li>
-                                        <li><a href="#">Content create</a></li>
+                                        <li><a href="#">Health Service</a></li>
+                                        <li><a href="#">Lifting Services</a></li>
+                                        <li><a href="#">Earth Movers</a></li>
+                                        <li><a href="#">Low loaders</a></li>
                                         <li><a href="#">Find Us</a></li>
                                     </ul>
                                 </div>
@@ -244,11 +245,11 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4><span>+564</span> 7885 3222</h4>
+                                    <h4><span>+256</span> 7885 3222</h4>
                                     <ul>
-                                        <li><a href="#">youremail@gmail.com</a></li>
+                                        <li><a href="#">info@dependable.com</a></li>
                                     </ul>
-                                    <p>123 East 26th Street, Fifth Floor, New York, NY 10011</p>
+                                    <p>Plot No. 3439 Lufuka, Ndejje Road, 150 m from Bata Bata Stage</p>
                                 </div>
                                 <!-- footer social -->
                                 <div class="footer-social">
@@ -266,7 +267,7 @@
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right">
                                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#" target="_blank">346Code</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                             </div>
                         </div>
