--- a/work.html
+++ b/work.html
@@ -218,10 +218,10 @@
                                 <div class="footer-tittle">
                                     <h4>Services</h4>
                                     <ul>
-                                        <li><a href="#">Marketing</a></li>
-                                        <li><a href="#"> SEO Service</a></li>
-                                        <li><a href="#">Digital market</a></li>
-                                        <li><a href="#">Content create</a></li>
+                                        <li><a href="#">Health Service</a></li>
+                                        <li><a href="#">Lifting Services</a></li>
+                                        <li><a href="#">Earth Movers</a></li>
+                                        <li><a href="#">Low loaders</a></li>
                                         <li><a href="#">Find Us</a></li>
                                     </ul>
                                 </div>
@@ -244,11 +244,11 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4><span>+564</span> 7885 3222</h4>
+                                    <h4><span>+256</span> 7885 3222</h4>
                                     <ul>
-                                        <li><a href="#">youremail@gmail.com</a></li>
+                                        <li><a href="#">info@dependable.com</a></li>
                                     </ul>
-                                    <p>123 East 26th Street, Fifth Floor, New York, NY 10011</p>
+                                    <p>Plot No. 3439 Lufuka, Ndejje Road, 150 m from Bata Bata Stage</p>
                                 </div>
                                 <!-- footer social -->
                                 <div class="footer-social">
