--- a/index.html
+++ b/index.html
@@ -191,19 +191,32 @@
                 <span class="flaticon-experience"></span>
               </div>
               <div class="services-cap">
-                <h5>Network and fleet planning</h5>
-                <p>Basis of good commercial airline planning as understanding and modelling true market demand lies.</p>
+                <h5>Network Planning</h5>
+                <p>We assist airlines to assess their current networks in order to match market demand with their capacities and strategic objectives. Using industry data and network planning models we can accurately forecast revenue, flight schedule and fleet options under different scenarios and develop better economic and competitive solutions. Airlines rely on such models to design new routes or optimize existing ones..</p>
               </div>
             </div>
           </div>
+
+          <div class=" col-lg-4 col-md-6 col-sm-6">
+            <div class="single-services text-center mb-30">
+              <div class="services-ion">
+                <span class="flaticon-experience"></span>
+              </div>
+              <div class="services-cap">
+                <h5>Fleet Planning</h5>
+                <p>Business plan (to determine financial viability of new operation)The rapidly changing aviation market presents a major challenge to airlines as aircraft assets are capital intensive and require sufficient lead time to either acquire or divest. As a result, DAC‘s expertise comes in handy to airlines as to how to be pro-active and forward-thinking in developing their fleet plans.</p>
+              </div>
+            </div>
+          </div>
+
           <div class=" col-lg-4 col-md-6 col-sm-6">
             <div class="single-services text-center mb-30">
               <div class="services-ion">
                 <span class="flaticon-pay"></span>
               </div>
               <div class="services-cap">
-                <h5>Market analysis and forecasting</h5>
-                <p>Forecasting quantifies the size and growth of that demand. As an airline market analysis data.</p>
+                <h5>Market Analysis and Forecasting</h5>
+                <p>Studying passenger travel patterns and volumes by Origin-Destination (OD) is critical to planning and marketing activities of airlines. Using several industry data sources for bookings and airport travel statistics DAC can accurately estimate OD market sizes and fares by month, carrier, point of origin and travel gateway. With such accurate market size data we can plan and evaluate air service potentials for our clients.  </p>
               </div>
             </div>
           </div>
@@ -213,8 +226,10 @@
                 <span class="flaticon-good"></span>
               </div>
               <div class="services-cap">
-                <h5>Route design and optimization</h5>
-                <p>Route design and optimization of flight times to improve route performance</p>
+                <h5>Outsourcing MRO Services and Spare parts</h5>
+                <p>In aviation, the world over, Maintenance, Repair and Overhaul (MRO) is a critical obligation to ensure that aircrafts are maintained in pre-determined conditions of airworthiness in order to safely transport passengers and cargo.  
+
+                  DAC collaborates with MRO approved partners who have access to a wide range of spare parts and possess sufficient repair and overhaul capacity for different aircraft types including cargo and military types. All spare parts and MRO services which are outsourced by DAC meet the highest standard required of civilian and military airworthiness regulations.</p>
               </div>
             </div>
           </div>
@@ -224,30 +239,24 @@
                 <span class="flaticon-experience"></span>
               </div>
               <div class="services-cap">
-                <h5>Business plan</h5>
-                <p>Business plan (to determine financial viability of new operation)</p>
+                <h5>Business Planning</h5>
+                <p>The main purpose of a business plan is to determine financial viability of planned operation and strategic planning. Our consultants work with clients to develop the right business and strategic plan model that is guaranteed to deliver the expected results.
+
+                </p>
               </div>
             </div>
           </div>
-          <div class=" col-lg-4 col-md-6 col-sm-6">
-            <div class="single-services text-center mb-30">
-              <div class="services-ion">
-                <span class="flaticon-pay"></span>
-              </div>
-              <div class="services-cap">
-                <h5>Research to identify opportunities</h5>
-                <p>Increase revenues and load factor in cargo operations</p>
-              </div>
-            </div>
-          </div>
+
+          
+         
           <div class=" col-lg-4 col-md-6 col-sm-6">
             <div class="single-services text-center mb-30">
               <div class="services-ion">
                 <span class="flaticon-good"></span>
               </div>
               <div class="services-cap">
-                <h5>Outsourcing charter </h5>
-                <p>Outsourcing charter and lease services, and spare parts and maintenance contracts.
+                <h5>Chartering, Leasing and Purchasing </h5>
+                <p>We arrange aircraft charter, lease and purchase at competitive prices and on short notice thanks to our network of partners in the respective fields. Be it cargo, private jet or passenger aircraft, we can secure it to the satisfaction and requirements of the client.
                 </p>
               </div>
             </div>
