--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-lg-0">
+          <!-- <div class="col-lg-3 col-md-6 mb-lg-0">
             <div class="person">
               <figure>
                 <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
@@ -322,7 +322,7 @@
                 <span class="position">Head Operations</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 mb-lg-0">
             <div class="person">
