Whatsapp Link creation

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </div>
               </figure>
               <div class="person-contents">
-                <h3>Maureen</h3>
+                <h3>Mwoyo Maureen</h3>
                 <span class="position">Field Manager</span>
               </div>
             </div>
@@ -297,13 +297,13 @@
               <figure>
                 <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
                 <div class="social">
-                  <a href="#"><span class="fab fa-whatsapp"></span></a>
-                  <a href="#"><span class="fa fa-phone"></span></a>
+                  <a href="https://wa.me/256772445223?text=I'm%20interested%20in%20your%20car%20for%20sale"><span class="fab fa-whatsapp"></span></a>
+                  <a href="tel:+256774728524"><span class="fa fa-phone"></span></a>
                 </div>
               </figure>
               <div class="person-contents">
-                <h3>Patrick</h3>
-                <span class="position">Manager</span>
+                <h3>Lutunga Patrick</h3>
+                <span class="position">Project Manager</span>
               </div>
             </div>
           </div>
