--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               <figure>
                 <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
                 <div class="social">
-                  <a href="https://wa.me/256772445223?text=I'm%20interested%20in%20your%20car%20for%20sale"><span class="fab fa-whatsapp"></span></a>
+                  <a href="https://wa.me/256772445223?text=I%20would%20like%20to%20inquire%20about%20your%20services"><span class="fab fa-whatsapp"></span></a>
                   <a href="tel:+256774728524"><span class="fa fa-phone"></span></a>
                 </div>
               </figure>
