Home Page Info Update

--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
             <div class="hero__caption">
               <h1 data-animation="fadeInLeft" data-delay=".4s">Dependable Aviation <br>Consulting
               </h1>
-              <p data-animation="fadeInLeft" data-delay=".6s">Dependable Aviation Consulting (DAC) is a
-                division of Dependable Outcomes Ltd (DOL), a privately owned Ugandan company based in
-                Kampala, Uganda..</p>
+              <p data-animation="fadeInLeft" data-delay=".6s">Dependable Aviation Consulting (DAC) is a division of Dependable Outcomes Ltd (DOL), a privately owned Ugandan company based in Kampala. At DAC we strive to offer our clients result-oriented solutions in airline management consulting, chartering, leasing and outsourcing of aircraft spare parts and maintenance contracts. Our team of consultants has the industry competence in these fields and can provide tailored solutions to meet each client’s needs. </p>
               <!-- Hero Btn -->
               <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".9s">
                 View project
@@ -155,11 +153,11 @@
                 data-transition-duration="5s">
             </div>
             <div class="hero__caption">
-              <h1 data-animation="fadeInLeft" data-delay=".4s">Dependable Aviation <br>Services
+              <h1 data-animation="fadeInLeft" data-delay=".4s">Services
               </h1>
-              <p data-animation="fadeInLeft" data-delay=".6s">Some of our services are offered through
-                partnerships we have established with industry experts in UAE, USA and Canada so as to
-                effectively meet our clients’ demand and delivery requirements. </p>
+              <p data-animation="fadeInLeft" data-delay=".6s">DAC offers consulting services in airline management, leasing and chartering passenger and/or air cargo aircrafts as well as outsourcing spare parts and maintenance contracts for airline clients in the East Africa and Central Africa regions. Charter services are more geared towards government officials and company executives mainly in the oil industry who need to travel at their own time with convenience and comfort.
+
+Some of our services are offered through partnerships we have established with industry consultants in UAE, USA and Canada so as to effectively meet our clients’ demand and delivery requirements. </p>
               <!-- Hero Btn -->
               <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".9s">
                 View project
@@ -281,8 +279,8 @@
               <figure>
                 <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
                 <div class="social">
-                  <a href="#"><span class="fab fa-whatsapp"></span></a>
-                  <a href="tel:+256779212834"><span class="fa fa-phone"></span></a>
+                  <a href="https://wa.me/256775954528?text=Hi,%20I%20would%20like%20to%20inquire%20about%20your%20services"><span class="fab fa-whatsapp"></span></a>
+                  <a href="tel:+256775354528"><span class="fa fa-phone"></span></a>
                 </div>
               </figure>
               <div class="person-contents">
