Created Clients Page

--- a/clients.html
+++ b/clients.html
@@ -122,7 +122,7 @@
         <div class="row">
           <div class="col-xl-12">
             <div class="hero-cap text-center pt-50">
-              <h2>Our Services</h2>
+              <h2>Our Clients</h2>
             </div>
           </div>
         </div>
@@ -139,8 +139,8 @@
                 <span class="flaticon-experience"></span>
               </div>
               <div class="services-cap">
-                <h5>Network Planning</h5>
-                <p>We assist airlines to assess their current networks in order to match market demand with their capacities and strategic objectives. Using industry data and network planning models we can accurately forecast revenue, flight schedule and fleet options under different scenarios and develop better economic and competitive solutions. Airlines rely on such models to design new routes or optimize existing ones..</p>
+                <h5>Airlines</h5>
+                <p></p>
               </div>
             </div>
           </div>
@@ -151,8 +151,8 @@
                 <span class="flaticon-experience"></span>
               </div>
               <div class="services-cap">
-                <h5>Fleet Planning</h5>
-                <p>Business plan (to determine financial viability of new operation)The rapidly changing aviation market presents a major challenge to airlines as aircraft assets are capital intensive and require sufficient lead time to either acquire or divest. As a result, DAC‘s expertise comes in handy to airlines as to how to be pro-active and forward-thinking in developing their fleet plans.</p>
+                <h5>Governments</h5>
+                <p></p>
               </div>
             </div>
           </div>
@@ -163,8 +163,8 @@
                 <span class="flaticon-pay"></span>
               </div>
               <div class="services-cap">
-                <h5>Market Analysis and Forecasting</h5>
-                <p>Studying passenger travel patterns and volumes by Origin-Destination (OD) is critical to planning and marketing activities of airlines. Using several industry data sources for bookings and airport travel statistics DAC can accurately estimate OD market sizes and fares by month, carrier, point of origin and travel gateway. With such accurate market size data we can plan and evaluate air service potentials for our clients.  </p>
+                <h5>UN and Humanitarian agencies</h5>
+                <p></p>
               </div>
             </div>
           </div>
@@ -174,14 +174,12 @@
                 <span class="flaticon-good"></span>
               </div>
               <div class="services-cap">
-                <h5>Outsourcing MRO Services and Spare parts</h5>
-                <p>In aviation, the world over, Maintenance, Repair and Overhaul (MRO) is a critical obligation to ensure that aircrafts are maintained in pre-determined conditions of airworthiness in order to safely transport passengers and cargo.  
-
-                  DAC collaborates with MRO approved partners who have access to a wide range of spare parts and possess sufficient repair and overhaul capacity for different aircraft types including cargo and military types. All spare parts and MRO services which are outsourced by DAC meet the highest standard required of civilian and military airworthiness regulations.</p>
+                <h5>Multinational companies</h5>
+                <p></p>
               </div>
             </div>
           </div>
-          <div class=" col-lg-4 col-md-6 col-sm-6">
+          <!-- <div class=" col-lg-4 col-md-6 col-sm-6">
             <div class="single-services text-center mb-30">
               <div class="services-ion">
                 <span class="flaticon-experience"></span>
@@ -193,11 +191,11 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
 
           
          
-          <div class=" col-lg-4 col-md-6 col-sm-6">
+          <!-- <div class=" col-lg-4 col-md-6 col-sm-6">
             <div class="single-services text-center mb-30">
               <div class="services-ion">
                 <span class="flaticon-good"></span>
@@ -208,7 +206,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
