--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
                       <li><a href="services.html">Services</a></li>
+                      <li><a href="clients.html">Clients</a></li>
                       <!-- <li><a href="work.html">Works</a></li>
                                             <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
@@ -184,7 +185,7 @@ Some of our services are offered through partnerships we have established with i
                 <img src="assets/img/hero/hero_img.jpg" alt="" data-animation="fadeInRight" data-transition-duration="5s">
               </div>
               <div class="hero__caption">
-                <h1 data-animation="fadeInLeft" data-delay=".4s">More Services
+                <h1 data-animation="fadeInLeft" data-delay=".4s">Services
                 </h1>
                 <p data-animation="fadeInLeft" data-delay=".6s">We offer integrated solutions for private and airline customers in the following areas 
                   <br> <strong>Network and Fleet Planning</strong>
@@ -326,7 +327,7 @@ Some of our services are offered through partnerships we have established with i
               </figure>
               <div class="person-contents">
                 <h3>Mwoyo Maureen</h3>
-                <span class="position">Field Manager</span>
+                <span class="position">Office Administrator</span>
               </div>
             </div>
           </div>
@@ -342,7 +343,7 @@ Some of our services are offered through partnerships we have established with i
               </figure>
               <div class="person-contents">
                 <h3>Lutunga Patrick</h3>
-                <span class="position">Project Manager</span>
+                <span class="position">Senior consultant</span>
               </div>
             </div>
           </div>
@@ -368,13 +369,13 @@ Some of our services are offered through partnerships we have established with i
               <figure>
                 <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
                 <div class="social">
-                  <a href="https://wa.me/256779230768"><span class="fab fa-whatsapp"></span></a>
-                  <a href="tel:+256779230768"><span class="fa fa-phone"></span></a>
+                  <a href="https://wa.me/256784060048?text=Hi,%20I%20would%20like%20to%20inquire%20about%20your%20services"><span class="fab fa-whatsapp"></span></a>
+                  <a href="tel:+256784060048"><span class="fa fa-phone"></span></a>
                 </div>
               </figure>
               <div class="person-contents">
                 <h3>Fred Guyina Kyankya</h3>
-                <span class="position">Manager</span>
+                <span class="position">General Manager</span>
               </div>
             </div>
           </div>
@@ -392,8 +393,8 @@ Some of our services are offered through partnerships we have established with i
       <!-- left Contents -->
       <div class="starups">
         <div class="starups-details">
-          <span>Features That You Will Get</span>
-          <h3>Some of our services are <br>offered through partnerships</h3>
+          <!-- <span>Features That You Will Get</span> -->
+          <h3>Our Expertise</h3>
           <!-- Details -->
           <div class="starups-list">
             <ul>
@@ -407,8 +408,7 @@ Some of our services are offered through partnerships we have established with i
                 </svg>
               </li>
               <li>
-                <p>Research to identify opportunities to increase revenues and load factor in cargo
-                  operations</p>
+                <p>Business Planning</p>
               </li>
             </ul>
             <ul>
@@ -422,7 +422,7 @@ Some of our services are offered through partnerships we have established with i
                 </svg>
               </li>
               <li>
-                <p>Outsourcing charter and lease services, and spare parts and maintenance contracts</p>
+                <p>Network and Fleet Planning</p>
               </li>
             </ul>
             <ul>
@@ -436,9 +436,41 @@ Some of our services are offered through partnerships we have established with i
                 </svg>
               </li>
               <li>
-                <p>Route design and optimization of flight times to improve route performance</p>
+                <p>Market Analysis and Forecasting</p>
               </li>
             </ul>
+
+            <ul>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
+                  height="30px">
+                  <path fill-rule="evenodd" fill="rgb(4, 219, 236)"
+                    d="M15.000,0.000 C23.284,0.000 30.000,6.716 30.000,15.000 C30.000,23.284 23.284,30.000 15.000,30.000 C6.716,30.000 -0.000,23.284 -0.000,15.000 C-0.000,6.716 6.716,0.000 15.000,0.000 Z" />
+                  <text kerning="auto" font-family="themify" fill="rgb(255, 255, 255)" font-size="14px" x="9px"
+                    y="22.0320000000002px">&#58956;</text>
+                </svg>
+              </li>
+              <li>
+                <p>Chartering, Leasing and Purchasing</p>
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
+                  height="30px">
+                  <path fill-rule="evenodd" fill="rgb(4, 219, 236)"
+                    d="M15.000,0.000 C23.284,0.000 30.000,6.716 30.000,15.000 C30.000,23.284 23.284,30.000 15.000,30.000 C6.716,30.000 -0.000,23.284 -0.000,15.000 C-0.000,6.716 6.716,0.000 15.000,0.000 Z" />
+                  <text kerning="auto" font-family="themify" fill="rgb(255, 255, 255)" font-size="14px" x="9px"
+                    y="22.0320000000002px">&#58956;</text>
+                </svg>
+              </li>
+              <li>
+                <p>Outsourcing MRO Services and Spare parts.</p>
+              </li>
+            </ul>
+
+          
           </div>
         </div>
       </div>
@@ -511,7 +543,7 @@ Some of our services are offered through partnerships we have established with i
             <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4><span>+256</span> 7885 3222</h4>
+                  <h4><span>+256</span> 772 445223</h4>
                   <ul>
                     <li><a href="#">info@dependable.com</a></li>
                   </ul>
