--- a/work.html
+++ b/work.html
@@ -80,6 +80,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
                       <li><a href="services.html">Services</a></li>
+                      <li><a href="clients.html">Clients</a></li>
                       <!-- <li><a href="work.html">Works</a></li>
                                             <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
