--- a/about.html
+++ b/about.html
@@ -174,8 +174,8 @@
       <!-- left Contents -->
       <div class="starups">
         <div class="starups-details">
-          <span>Features That You Will Get</span>
-          <h3>Some of our services are <br>offered through partnerships</h3>
+          <!-- <span>Features That You Will Get</span> -->
+          <h3>Our Expertise</h3>
           <!-- Details -->
           <div class="starups-list">
             <ul>
@@ -189,8 +189,7 @@
                 </svg>
               </li>
               <li>
-                <p>Research to identify opportunities to increase revenues and load factor in cargo
-                  operations</p>
+                <p>Business Planning</p>
               </li>
             </ul>
             <ul>
@@ -204,7 +203,7 @@
                 </svg>
               </li>
               <li>
-                <p>Outsourcing charter and lease services, and spare parts and maintenance contracts</p>
+                <p>Network and Fleet Planning</p>
               </li>
             </ul>
             <ul>
@@ -218,9 +217,41 @@
                 </svg>
               </li>
               <li>
-                <p>Route design and optimization of flight times to improve route performance</p>
+                <p>Market Analysis and Forecasting</p>
               </li>
             </ul>
+
+            <ul>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
+                  height="30px">
+                  <path fill-rule="evenodd" fill="rgb(4, 219, 236)"
+                    d="M15.000,0.000 C23.284,0.000 30.000,6.716 30.000,15.000 C30.000,23.284 23.284,30.000 15.000,30.000 C6.716,30.000 -0.000,23.284 -0.000,15.000 C-0.000,6.716 6.716,0.000 15.000,0.000 Z" />
+                  <text kerning="auto" font-family="themify" fill="rgb(255, 255, 255)" font-size="14px" x="9px"
+                    y="22.0320000000002px">&#58956;</text>
+                </svg>
+              </li>
+              <li>
+                <p>Chartering, Leasing and Purchasing</p>
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
+                  height="30px">
+                  <path fill-rule="evenodd" fill="rgb(4, 219, 236)"
+                    d="M15.000,0.000 C23.284,0.000 30.000,6.716 30.000,15.000 C30.000,23.284 23.284,30.000 15.000,30.000 C6.716,30.000 -0.000,23.284 -0.000,15.000 C-0.000,6.716 6.716,0.000 15.000,0.000 Z" />
+                  <text kerning="auto" font-family="themify" fill="rgb(255, 255, 255)" font-size="14px" x="9px"
+                    y="22.0320000000002px">&#58956;</text>
+                </svg>
+              </li>
+              <li>
+                <p>Outsourcing MRO Services and Spare parts.</p>
+              </li>
+            </ul>
+
+          
           </div>
         </div>
       </div>
@@ -266,12 +297,12 @@
             <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4>Services</h4>
+                  <h4>Affliated Companies</h4>
                   <ul>
-                    <li><a href="#">Health Service</a></li>
-                    <li><a href="#">Lifting Services</a></li>
-                    <li><a href="#">Earth Movers</a></li>
-                    <li><a href="#">Low loaders</a></li>
+                    <li><a href="#">Dependable Health Supplies</a></li>
+                    <li><a href="#">Dependable Outcomes Ltd</a></li>
+                    <!-- <li><a href="#">Earth Movers</a></li>
+                    <li><a href="#">Low loaders</a></li> -->
                     <li><a href="#">Find Us</a></li>
                   </ul>
                 </div>
@@ -294,7 +325,7 @@
             <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4><span>+256</span> 7885 3222</h4>
+                  <h4><span>+256</span> 772 445223</h4>
                   <ul>
                     <li><a href="#">info@dependable.com</a></li>
                   </ul>
