--- a/index.html
+++ b/index.html
@@ -515,12 +515,12 @@ Some of our services are offered through partnerships we have established with i
             <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4>Services</h4>
+                  <h4>Affliated Companies</h4>
                   <ul>
-                    <li><a href="#">Health Service</a></li>
-                    <li><a href="#">Lifting Services</a></li>
-                    <li><a href="#">Earth Movers</a></li>
-                    <li><a href="#">Low loaders</a></li>
+                    <li><a href="#">Dependable Health Supplies</a></li>
+                    <li><a href="#">Dependable Outcomes Ltd</a></li>
+                    <!-- <li><a href="#">Earth Movers</a></li>
+                    <li><a href="#">Low loaders</a></li> -->
                     <li><a href="#">Find Us</a></li>
                   </ul>
                 </div>
