--- a/services.html
+++ b/services.html
@@ -250,12 +250,12 @@
             <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4>Services</h4>
+                  <h4>Affliated Companies</h4>
                   <ul>
-                    <li><a href="#">Health Service</a></li>
-                    <li><a href="#">Lifting Services</a></li>
-                    <li><a href="#">Earth Movers</a></li>
-                    <li><a href="#">Low loaders</a></li>
+                    <li><a href="#">Dependable Health Supplies</a></li>
+                    <li><a href="#">Dependable Outcomes Ltd</a></li>
+                    <!-- <li><a href="#">Earth Movers</a></li>
+                    <li><a href="#">Low loaders</a></li> -->
                     <li><a href="#">Find Us</a></li>
                   </ul>
                 </div>
@@ -278,7 +278,7 @@
             <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4><span>+256</span> 7885 3222</h4>
+                  <h4><span>+256</span> 772 445223</h4>
                   <ul>
                     <li><a href="#">info@dependable.com</a></li>
                   </ul>
