--- a/contact.html
+++ b/contact.html
@@ -136,9 +136,9 @@
               <i class="fa fa-phone"></i>
               <h4>Phone</h4>
               <p>Feel free to call us on</p>
-              <a href="tel:+256700000000">Airtel Uganda</a>
+              <a href="tel:+256774728524">Office</a>
               <br>
-              <a href="tel:+256770000000">MTN Uganda</a>
+              <a href="tel:+256775354528">Mobile</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -153,7 +153,7 @@
             <div class="contact-item">
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
-              <p>Pt. 3439 Lufuka, Ndejje Road off Entebbe <br>Road (150 m from Bata Bata Stage)</p>
+              <p>Pt. 3439 Lufuka, Ndejje Rd off Entebbe <br>Road (150 m from Bata Bata Stage)</p>
               <a href="#">Namasuba, Kampala </a>
             </div>
           </div>
@@ -214,7 +214,7 @@
             <div class="media contact-info">
               <span class="contact-info__icon"><i class="ti-tablet"></i></span>
               <div class="media-body">
-                <h3>+256 770000000</h3>
+                <h3>+256 772 445223</h3>
                 <p>Mon to Fri 9am to 6pm</p>
               </div>
             </div>
@@ -250,12 +250,12 @@
             <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4>Services</h4>
+                  <h4>Affliated Companies</h4>
                   <ul>
-                    <li><a href="#">Health Service</a></li>
-                    <li><a href="#">Lifting Services</a></li>
-                    <li><a href="#">Earth Movers</a></li>
-                    <li><a href="#">Low loaders</a></li>
+                    <li><a href="#">Dependable Health Supplies</a></li>
+                    <li><a href="#">Dependable Outcomes Ltd</a></li>
+                    <!-- <li><a href="#">Earth Movers</a></li>
+                    <li><a href="#">Low loaders</a></li> -->
                     <li><a href="#">Find Us</a></li>
                   </ul>
                 </div>
@@ -278,7 +278,7 @@
             <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4><span>+256</span> 7885 3222</h4>
+                  <h4><span>+256</span> 772 445223</h4>
                   <ul>
                     <li><a href="#">info@dependable.com</a></li>
                   </ul>
