--- a/work.html
+++ b/work.html
@@ -246,12 +246,12 @@
             <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4>Services</h4>
+                  <h4>Affliated Companies</h4>
                   <ul>
-                    <li><a href="#">Health Service</a></li>
-                    <li><a href="#">Lifting Services</a></li>
-                    <li><a href="#">Earth Movers</a></li>
-                    <li><a href="#">Low loaders</a></li>
+                    <li><a href="#">Dependable Health Supplies</a></li>
+                    <li><a href="#">Dependable Outcomes Ltd</a></li>
+                    <!-- <li><a href="#">Earth Movers</a></li>
+                    <li><a href="#">Low loaders</a></li> -->
                     <li><a href="#">Find Us</a></li>
                   </ul>
                 </div>
@@ -274,7 +274,7 @@
             <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
               <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                  <h4><span>+256</span> 7885 3222</h4>
+                  <h4><span>+256</span> 772 445223</h4>
                   <ul>
                     <li><a href="#">info@dependable.com</a></li>
                   </ul>
@@ -296,10 +296,12 @@
             <div class="col-xl-12 ">
               <div class="footer-copy-right">
                 <p>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;<script>
                     document.write(new Date().getFullYear());
                   </script> All rights reserved | This website is made with <i class="fa fa-heart"
                     aria-hidden="true"></i> by <a href="#" target="_blank">346Code</a>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
               </div>
             </div>
