--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
               <p data-animation="fadeInLeft" data-delay=".6s">Dependable Aviation Consulting (DAC) is a division of Dependable Outcomes Ltd (DOL), a privately owned Ugandan company based in Kampala. At DAC we strive to offer our clients result-oriented solutions in airline management consulting, chartering, leasing and outsourcing of aircraft spare parts and maintenance contracts. Our team of consultants has the industry competence in these fields and can provide tailored solutions to meet each client’s needs. </p>
               <!-- Hero Btn -->
               <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".9s">
-                View project
+                <!-- View project -->
                 <!-- Arrow SVG icon -->
-                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <!-- <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                   style="enable-background:new 0 0 512 512;" xml:space="preserve">
                   <path
@@ -141,7 +141,7 @@
                                          c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557
                                          l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104
                                          c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z" />
-                </svg>
+                </svg> -->
               </a>
             </div>
           </div>
@@ -162,9 +162,9 @@
 Some of our services are offered through partnerships we have established with industry consultants in UAE, USA and Canada so as to effectively meet our clients’ demand and delivery requirements. </p>
               <!-- Hero Btn -->
               <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".9s">
-                View project
+                <!-- View project -->
                 <!-- Arrow SVG icon -->
-                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <!-- <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                   style="enable-background:new 0 0 512 512;" xml:space="preserve">
                   <path
@@ -172,7 +172,7 @@ Some of our services are offered through partnerships we have established with i
                                          c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557
                                          l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104
                                          c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z" />
-                </svg>
+                </svg> -->
               </a>
             </div>
           </div>
@@ -182,7 +182,7 @@ Some of our services are offered through partnerships we have established with i
           <div class="single-slider">
             <div class="slider-cap-wrapper">
               <div class="hero__img">
-                <img src="assets/img/hero/hero_img.jpg" alt="" data-animation="fadeInRight" data-transition-duration="5s">
+                <img src="assets/img/hero/hero_img1.jpg" alt="" data-animation="fadeInRight" data-transition-duration="5s">
               </div>
               <div class="hero__caption">
                 <h1 data-animation="fadeInLeft" data-delay=".4s">Services
@@ -201,9 +201,9 @@ Some of our services are offered through partnerships we have established with i
                      </p>
                 <!-- Hero Btn -->
                 <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".9s">
-                  View project
+                  <!-- View project -->
                   <!-- Arrow SVG icon -->
-                  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                  <!-- <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                     style="enable-background:new 0 0 512 512;" xml:space="preserve">
                     <path
@@ -211,7 +211,7 @@ Some of our services are offered through partnerships we have established with i
                                            c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557
                                            l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104
                                            c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z" />
-                  </svg>
+                  </svg> -->
                 </a>
               </div>
             </div>
